--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Hub - Inicio</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="alternate" type="application/rss+xml" title="RSS Blog" href="feed/rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="RSS Podcast" href="feed/podcast.xml">
+    <link rel="alternate" type="application/opml+xml" title="OPML" href="feed/feeds.opml">
 </head>
 <body>
     <header>
