--- a/podcast/index.html
+++ b/podcast/index.html
@@ -24,7 +24,7 @@
             <article id="episodio1">
                 <h2>Episodio 1: Introducción al mundo de los eSports</h2>
                 <audio controls>
-                    <source src="episodio1.mp3" type="audio/mpeg">
+                    <source src="audios/episodio1.mp3" type="audio/mpeg">
                     Tu navegador no soporta audio.
                 </audio>
             </article>
@@ -32,7 +32,7 @@
             <article id="episodio2">
                 <h2>Episodio 2: El camino hacia el profesionalismo en Valorant</h2>
                 <audio controls>
-                    <source src="episodio2.mp3" type="audio/mpeg">
+                    <source src="audios/episodio2.mp3" type="audio/mpeg">
                     Tu navegador no soporta audio.
                 </audio>
             </article>
@@ -40,7 +40,7 @@
             <article id="episodio3">
                 <h2>Episodio 3: Análisis de las mejores jugadas en competiciones de Valorant</h2>
                 <audio controls>
-                    <source src="episodio3.mp3" type="audio/mpeg">
+                    <source src="audios/episodio3.mp3" type="audio/mpeg">
                     Tu navegador no soporta audio.
                 </audio>
             </article>
@@ -53,7 +53,6 @@
             <a href="../feed/rss.xml" aria-label="RSS Blog">📡 RSS Blog</a> |
             <a href="../feed/podcast.xml" aria-label="RSS Podcast">🎙 RSS Podcast</a> |
             <a href="../feed/feeds.opml" aria-label="Suscripción OPML">📜 OPML</a>
-            
         </p>
     </footer>
 </body>
