--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <p>
             <a href="feed/rss.xml" aria-label="RSS Blog">📡 RSS Blog</a> |
             <a href="feed/podcast.xml" aria-label="RSS Podcast">🎙 RSS Podcast</a> |
-            <a href="feed/feeds.opml" aria-label="Suscripción OPML">📜 OPML</a>
-        </p>
+            <a href="../feed/feeds.opml" download="feeds.opml" aria-label="Suscripción OPML">📜 OPML</a>
+
     </footer>
 </body>
 </html>
